scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics14.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,13): error TS1109: Expression expected.


==== /a.js (1 errors) ====
    Foo<number>();
                ~
!!! error TS1109: Expression expected.